--- a/pp/templates/pp/index.html
+++ b/pp/templates/pp/index.html
@@ -6,30 +6,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saad Khan PortFolio</title>
-
     <link rel="stylesheet" href="{% static 'pp/css/index.css'%}">
 
     <script defer src="{% static 'pp/js/nav-bar.js' %}"></script>
+    <script defer src="{% static 'pp/js/particles.js' %}"></script>
+    <script defer src="{% static 'pp/js/app.js' %}"></script>
+    
 </head>
 <body>
-    <header class="primary-header ">
-        <div>logo</div>
-        
-        <button aria-controls="primary-navigation" 
-        aria-expanded="false" class="mobile-nav-toggle">
-            <span class="sr-only">Menu</span>
-        </button>    
-        
-        {%include 'pp/navbar.html'%}
-    </header>
+    <div id="particles-js"></div>
 
-    <main>
-        <h1>main</h1>
-        <img src="{% static 'pp/images/nav-close.svg' %}" alt="error">
-    </main>
+    <div class="" id="root">
+
+        <header class="primary-header flex border-line header-grid-item" >
+            <div id="header-logo" class="border-line"><h1>logo</h1></div>
+            
+            <button aria-controls="primary-navigation" 
+            aria-expanded="false" class="mobile-nav-toggle">
+                <span class="sr-only">Menu</span>
+            </button>    
+            
+            <div class="nav-grid-item">
+                {%include 'pp/navbar.html'%}    
+            </div>
+
+        </header>
+
+        <div class="socials-left-side-bar border-line" orientation="left">
+            <ul style="list-style: none;">
+                <li><a href="https://github.com/bchiang7" aria-label="GitHub" target="_blank" rel="noreferrer"><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><title>GitHub</title><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg></a></li>
+                <li><a href="https://www.instagram.com/bchiang7" aria-label="Instagram" target="_blank" rel="noreferrer"><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><title>Instagram</title><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg></a></li>
+                <li><a href="https://www.linkedin.com/in/bchiang7" aria-label="Linkedin" target="_blank" rel="noreferrer"><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin"><title>LinkedIn</title><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg></a></li>
+                <li><a href="https://twitter.com/bchiang7" aria-label="Twitter" target="_blank" rel="noreferrer"><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter"><title>Twitter</title><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg></a></li>
+            </ul>
+        </div>
+        
+        <main id="main-section" class="border-line">
+            <section id="section-home">
+                <div style="transition-delay:100ms;">
+                    <h1>Hi, my name is</h1>
+                </div>
+                <div style="transition-delay:200ms ;">
+                    <h2>Saad Khan</h2>
+                </div>
+                <div style="transition-delay:300ms ;">
+                    <h3>Computer / Software Engineer.</h3>
+                </div>
+                <div style="transition-delay:400ms ;">
+                    <p>I'm a computer engineer specialising in bulding interactivee
+                        systems and websites and occasionally desigining them as well.
+                    </p>
+                </div>
+            </section>
+
+            <section id="section-about" class="border-line">about</section>
+            <section id="section-projects" class="border-line">projects</section>
+            <section id="section-experience" class="border-line">experience</section>
+
+        </main>
+
+        <div class="email-right-side-bar border-line" orientation="right">
+            <a href="mailto:saadan06@gmail.com"><span>saadan06@gmail.com</span></a>
+        </div>
+
+
+        
+        <footer class="border-line">
+            <h1>footer</h1>
+        </footer>
     
-    <footer>
-        <h1>footer</h1>
-    </footer>
+    </div>
 </body>
 </html>
