--- a/pp/static/pp/css/index.css
+++ b/pp/static/pp/css/index.css
@@ -1,17 +1,38 @@
+html{
+  
+    scroll-behavior: smooth;  
+    scroll-snap-type: y mandatory;
+
+}
 :root{
     margin: 0px;
     padding: 0px;
     font-size: 16px;
     --font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+    --green:#64ffda;
+    --grey:#a2a8ae;
+    --blue:#00cdee;
 }
 body{
     height: 100vh;
     margin: 0%;
+    /* overflow-y:hidden; */
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    
+    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+}
+body::-webkit-scrollbar{
+    width: 0;
+    height: 0;
 }
 .primary-header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    scroll-snap-align: center;
 }
 
 
@@ -28,7 +49,9 @@ body{
 	width: 1px !important;
 	white-space: nowrap !important; 
 }
+
 /* ##########background CSS############### */
+
 #particles-js{
     width: 100vw;
     height: 100vh;
@@ -41,9 +64,8 @@ canvas {
   vertical-align: bottom;
 }
 .border-line{
-    border: 2px solid black;
+    /* border: 1px solid black; */
 }
-
 
 #root{
     display: grid;
@@ -52,7 +74,6 @@ canvas {
     height: 100%;
     width: 100%;
     grid-gap: 5px;
-
 }
 
 .header-grid-item{
@@ -67,7 +88,28 @@ canvas {
     justify-content: center;
     align-items: center; 
 }
+.scroll-buttons-container{
+    position: fixed;
+    top: 10em;
 
+}
+.scroll-buttons-container div a{
+    /* content: ""; */
+    height: 10px;
+    width: 30px;
+    background: #828c96;
+    border-radius: 2px;
+    margin-top: 30px;
+    line-height: 1px;
+}
+.side-scroll-lines{
+    height: 3px;
+    width: 30px;
+    background: #828c96;
+    border-radius: 2px;
+    margin-top: 30px;
+    
+}
 
 #header-logo{
     grid-template-columns: 1 / 1;
@@ -78,15 +120,33 @@ canvas {
     display: flex;
     align-items: center;
 }
+.logo{
+    color: var(--grey);
+    font-family:"futura_m";
+    font-size: 2.1rem;
+    letter-spacing: 0.08rem;
+    font-weight:100;
+    padding-inline-start: 10px;   
+    animation: top-slidein 1s ease 0s 1 normal forwards ;   
+    /* animation: left-slide-in 1.25s ease 0s 1 normal forwards; */
+}
+
+a{
+    text-decoration: none;
+}
+.logo:hover{
+    transform: translate(30px,0px);
+    animation: scaleup 0.2s linear 0s 1 normal forwards;
+}
 
 #main-section{
     height: fit-content;
     width: 100%;
-    border: 2px solid red;
+    font: inherit;
+    /* border: 2px solid red; */
 }
 /* LEFT SIDE BAR */
 .socials-left-side-bar{
-    
     height: calc(100vh - 100px);
     display: flex;
     flex-direction: column-reverse;
@@ -97,15 +157,29 @@ canvas {
     padding: 0%;
     margin: 1.5em;
     position: fixed;
-    width: 18PX;
-    bottom: 100PX; 
+    width: 20PX;
+    bottom: -22PX; 
 }
 .socials-left-side-bar > ul >li >a{
     color: white;
 }
+.socials-left-side-bar>ul>li >a:hover{
+    color:#64ffda;
+}
+.socials-left-side-bar ul li a:hover{
+    padding-left: 8px;
+}
+.socials-left-side-bar>ul::after{
+    display: block;
+    content: "";
+    width: 2px;
+    height: 110px;
+    margin: 0px auto;
+    background-color: grey;
+}
 .socials-left-side-bar >ul>li{
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 18px;
+    margin-bottom: 18px;
 }
 
 /* RIGHT SIDE BAR */
@@ -114,7 +188,7 @@ canvas {
     display: flex;
     flex-direction: column-reverse;
 }
-.email-right-side-bar > a{
+.email-right-side-bar >div> a{
     color: white;
     text-decoration-skip-ink: auto;
     text-decoration: none;
@@ -125,34 +199,267 @@ canvas {
     transform: rotate(90deg);
     position: fixed;
     right: -49px;
-    bottom: 172px;
-
-    
-    
+    bottom: 195px;
 }
-
-/* MAIN SECTIONS */
+.email-right-side-bar div a:hover {
+    color:#64ffda;
+    padding-left: 8px;
+}
+.email-right-side-bar div::after{
+    display: block;
+    content: "";
+    width: 2px;
+    height: 110px;
+    margin: 0px auto;
+    background-color: gray;
+    position: fixed;
+    right: 39px;
+    bottom: 0px;
+}
+/* ####################################### MAIN SECTIONS #############################################*/
 #section-home{
-    height: 100vh;
+    height: calc(100vh - 100px);
     width: 100%;
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
 }
+.title{
+    color: #fff;
+    /* position: absolute; */
+    overflow: hidden;
+    /* top: 40%; */
+    /* -webkit-transform: translate3d(0, -50%, 0); */
+    /* transform: translate3d(0, -50%, 0); */
+    /* margin-left: 11%; */
+    /* margin-right: 11%; */
+    /* flex-grow: 1; */
+    width: fit-content;
+    padding-right: 25%;
+    
+}
+.hero-right-side{
+    /* flex-grow: 1; */
+    /* width: 100%; */
+    width: fit-content;
+    /* border: 2px solid red; */
+}
+.portfolio{
+    font-size: 2.4rem;
+    letter-spacing: 0.1em;
+    text-shadow: 0 10px 15px rgba(2, 11, 22, 0.2);
+    color: #ff4d5a;
+    font-family: "futura_b";
+    /* margin-top:100%; */
+    /* border: 2px solid red; */
+    font-weight: bold;
+    position:relative;
+    top: 5em;
+    left:8%;
+
+    animation: right-slide-in 1s ease-out 0s 1 normal forwards;
+}
+
+.myname-bottom-first-line{
+    
+    background-color: #ff4d5a;
+    content: "";
+    width: 88px;
+    height: 3px;
+    display: block;
+    border-radius:2px;
+    margin-bottom: 15px;
+    animation: left-slide-in 1.25s ease-in 0s 1 normal forwards;
+}
+.myname-bottom-second-line{
+    background-color: #ff4d5a;
+    content: "";
+    width: 88px;
+    height: 3px;
+    display: block;
+    border-radius:2px;
+    margin-left: 50px;
+    animation: left-slide-in 1.5s ease-in 0s 1 normal forwards;
+}
+.title-text{
+    font-size: 6rem;
+    line-height: 1;
+    letter-spacing: 0.1em;
+    margin-bottom: 1.6rem;
+    font-family: "futura_m";
+    font-weight: normal;
+    text-shadow: 0 10px 30px rgba(2, 11, 22, 0.5);
+    /* transform: translateX(0%) translateZ(0px); */
+    animation: left-slide-in 1s ease-in 0s 1 normal forwards;
+    /* border: 2px solid red; */
+    
+}
+.title-below-para{
+    color: #fff;
+    font-size: 1.8rem;
+    font: "inherit";
+    letter-spacing: 0.05em;
+    line-height: 1.5;
+    animation: left-slide-in 1.1s ease-in-out 0s 1 normal forwards;
+}
+
+.resume-button{
+    position: relative;
+    top: 11em;
+    /* left:20%; */
+    display: flex;
+    flex-wrap: wrap;
+    animation: right-slide-in 1.0s ease-out 0s 1 normal forwards;
+    
+}
+.resume-button a{
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+    border:2px solid var(--green);
+    margin: 10px;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 2px;
+    color: #fff;
+    -webkit-box-reflect: below 0px linear-gradient(transparent,#0002);
+    transition: 0.5s;
+    margin-left: 25%;
+}
+.resume-button a:hover{
+    color: #000;
+    transition-delay: 1.5s;
+    box-shadow: 0 0 10px var(--green),
+    0 0 20px var(--green),
+    0 0 40px var(--green),
+    0 0 80px var(--green),
+    0 0 160px var(--green);
+    
+}
+.resume-button a span{
+    position: relative;
+    z-index: 100;
+}
+
+
+.resume-button a::before{
+    content: "";
+    position: absolute;
+    left: -20px;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 2px;
+    width: 20px;
+    background:var(--green);
+    box-shadow: 5px -8px 0 var(--green),
+                5px 8px 0 var(--green);
+    transition:width 0.5s,left 0.5s,height 0.5s,box-shadow 0.5s;
+    transition-delay: 1s,0.5s,0s;
+    
+}
+.resume-button a:hover::before{
+    width: 50%;
+    height:100%;
+    left: -2px;
+    /* top: 4px; */
+    box-shadow: 5px 0 0 var(--green),
+    5px 0 0 var(--green);
+    transition-delay: 0s,0s,0.5s,1s;
+    
+}
+
+
+
+.resume-button a::after{
+    content: "";
+    position: absolute;
+    right: -20px;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 2px;
+    width: 20px;
+    background:var(--green);
+    box-shadow: -5px -8px 0 var(--green),
+                -5px 8px 0 var(--green);
+    transition:width 0.5s,left 0.5s,height 0.5s,box-shadow 0.5s;
+    transition-delay: 1s,0.5s,0s;
+    
+}
+.resume-button a:hover::after{
+    width: 60%;
+    height:100%;
+    right: -2px;
+    /* top: 4px; */
+    box-shadow: -5px 0 0 var(--green),
+                -5px 0 0 var(--green);
+    transition-delay: 0s,0s,0.5s,1s;
+    
+}
+
+
+.talk-button{
+    margin-top: 2px;
+    margin-bottom: 2px;
+    animation: right-slide-in 1.1s ease-out 0s 1 normal forwards;
+}
+.talk-button a{
+    border: 2px solid var(--blue);
+    /* margin-left: clamp(30%,50%,50%) */
+    /* width: 108px; */
+    margin-left: clamp(25%,40%,50%);
+}
+.talk-button a span{
+    white-space: pre;
+    word-wrap: break-word;
+}
+.talk-button a:hover{
+    box-shadow: 0 0 10px var(--blue),
+    0 0 20px var(--blue),
+    0 0 40px var(--blue),
+    0 0 80px var(--blue),
+    0 0 160px var(--blue);
+}
+
+.talk-button a::before{
+    box-shadow: 5px -8px 0 var(--blue),
+    5px 8px 0 var(--blue);
+    background:var(--blue);
+}
+.talk-button a::after{
+    box-shadow: -5px -8px 0 var(--blue),
+    -5px 8px 0 var(--blue);
+    background:var(--blue);
+}
+.talk-button a:hover::after{
+    box-shadow: -5px 0 0 var(--blue),
+    -5px 0 0 var(--blue);
+}
+
+
+
 
 #section-about{
     height: 100vh;
     width: 100%;
+    scroll-snap-align: center;
 }
 #section-projects{
     height: 100vh;
     width: 100%;
+    scroll-snap-align: center;
 }
 #section-experience{
     height: 100vh;
     width: 100%;
+    scroll-snap-align: center;
 }
 
 footer{
     width: calc(100vw - 80px);
     height: fit-content;
+    scroll-snap-align:center;
+    width: 100vw;
 }
 
 
@@ -171,4 +478,52 @@ footer{
 
 
 
+/* ################################# KEY FRAMES######################## */
+
+
+@keyframes left-slide-in{
+    0%{
+        opacity: 0;
+        transform: translateX(-250px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+@keyframes top-slidein{
+    0%{
+        opacity: 0;
+        transform:translateY(-100px);
+    }
+    100%{
+        opacity: 1;
+        transform:translateY(0px);
+    }
+}
+
+
+@keyframes scaleup {
+	0% {
+		transform: scale(1);
+	}
+
+	100% {
+		transform: scale(1.1);
+        color: var(--green);
+        width: fit-content;
+	}
+}
+
+
+@keyframes right-slide-in{
+    0%{
+        opacity: 0;
+        transform: translateX(250px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
 
