--- a/pp/templates/pp/navbar.html
+++ b/pp/templates/pp/navbar.html
@@ -1,28 +1,28 @@
 
 {%load static%}
-<link rel="stylesheet" href="{% static 'pp/css/navbar.css' %}">
+<link rel="stylesheet" href="{% static 'pp/css/nav-bar.css' %}">
 
 
 
 <nav>
     <ul id="primary-navigation"  class="primary-navigation flex" data-visible="false">
         <li class="active">
-            <a href="{% url 'pp:index' %}">
+            <a href="#section-home">
                 <span aria-hidden="true">00</span> Home
             </a>
         </li>
         <li>
-            <a href="">
+            <a href="#section-about">
                 <span aria-hidden="true">01</span> About
             </a>
         </li>
         <li>
-            <a href="">
+            <a href="#section-projects">
                 <span aria-hidden="true">02</span> Projects
             </a>
         </li>
         <li>
-            <a href="">
+            <a href="#section-experience">
                 <span aria-hidden="true">03</span> Experience
             </a>
         </li>
