--- a/pp/templates/pp/index.html
+++ b/pp/templates/pp/index.html
@@ -16,12 +16,24 @@
 <body>
     
     <div id="particles-js"></div>
-    <div class="scroll-buttons-container">
-        <div class="scroll-butt-1 side-scroll-lines"></div>
-        <div class="scroll-butt-2 side-scroll-lines"></div>
-        <div class="scroll-butt-3 side-scroll-lines"></div>
-        <div class="scroll-butt-4 side-scroll-lines"></div>
-    </div>    
+    <div id="shorcuts">
+        <div class="scroll-buttons-container">
+            <ul>
+                <li><a href=""><span></span></a></li>
+                <li><a href=""><span></span></a></li>
+                <li><a href=""><span></span></a></li>
+                <li><a href=""><span></span></a></li>
+            </ul>
+        </div>  
+        <div  class="right-side-btts">
+            <a href=""><span id="resume-side-btt">RS</span></a>
+        </div>
+
+        <div  class="right-side-btts">
+            <a href=""><span id="lets-talk-side-btt">LT</span></a>
+        </div>
+    </div>
+      
     <div class="" id="root">
 
 
