--- a/pp/static/pp/css/index.css
+++ b/pp/static/pp/css/index.css
@@ -1,7 +1,7 @@
 html{
   
     scroll-behavior: smooth;  
-    scroll-snap-type: y mandatory;
+    /* scroll-snap-type: y mandatory; */
 
 }
 :root{
@@ -12,6 +12,7 @@ html{
     --green:#64ffda;
     --grey:#a2a8ae;
     --blue:#00cdee;
+    --heading-white:#fff;
 }
 body{
     height: 100vh;
@@ -22,7 +23,7 @@ body{
     -ms-overflow-style: none;
     
     scroll-behavior: smooth;
-    scroll-snap-type: y mandatory;
+    /* scroll-snap-type: y mandatory; */
 }
 body::-webkit-scrollbar{
     width: 0;
@@ -58,7 +59,8 @@ body::-webkit-scrollbar{
     position: fixed;
     background: #505b66;
     z-index: -1;
-  }
+}
+
 canvas {
   display: block;
   vertical-align: bottom;
@@ -116,6 +118,7 @@ canvas {
     border-radius: 100%;
     padding: 10px; */
 }
+
 #resume-side-btt{
     position: fixed;
     top: 12em;
@@ -166,19 +169,6 @@ canvas {
     
 }
 
-@keyframes RR-btts-hover {
-    100%{
-        background-color:  var(--green);
-        color: black;
-    }
-}
-
-@keyframes LT-btts-hover {
-    100%{
-        background-color:  var(--blue);
-        color: black;
-    }
-}
 #header-logo{
     grid-template-columns: 1 / 1;
     height: 100%;
@@ -212,6 +202,7 @@ a{
     width: 100%;
     font: inherit;
     /* border: 2px solid red; */
+    /* padding-top: 10px; */
 }
 /* LEFT SIDE BAR */
 .socials-left-side-bar{
@@ -291,6 +282,7 @@ a{
     display: flex;
 
     justify-content: center;
+    /* padding-top: 10%; */
 }
 .title{
     color: #fff;
@@ -304,6 +296,7 @@ a{
     /* flex-grow: 1; */
     width: fit-content;
     padding-right: 20%;
+    padding-top: 10%;
     
 }
 .hero-right-side{
@@ -323,7 +316,9 @@ a{
     /* border: 2px solid red; */
     font-weight: bold;
     position:relative;
-    top: 5em;
+    /* top: 5em; */
+    top: 22%;
+    /* padding-top: 15%; */
 
     animation: right-slide-in 1s ease-out 0s 1 normal forwards;
 }
@@ -356,7 +351,7 @@ a{
     margin-bottom: 1.6rem;
     font-family: "futura_m";
     font-weight: normal;
-    text-shadow: 0 10px 30px rgba(2, 11, 22, 0.5);
+    /* text-shadow: 0 10px 30px rgba(2, 11, 22, 0.5); */
     /* transform: translateX(0%) translateZ(0px); */
     animation: left-slide-in 1s ease-in 0s 1 normal forwards;
     /* border: 2px solid red; */
@@ -504,14 +499,121 @@ a{
     -5px 0 0 var(--blue);
 }
 
+.hover-underline-animation {
+    display: inline-block;
+    position: relative;
+    color: inherit;
+}
+  
+.hover-underline-animation:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #ff4d5a;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+  
+.hover-underline-animation:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+.reveal {
+    opacity: 0;
+    transform: translate3d(0,100px,0);
+    transition: opacity 0.8s, transform 0.8s;
+}
+.reveal_visible {
+    opacity: 1;
+    transform: translate3d(0,0,0);
+}
 
 
 
 #section-about{
     height: 100vh;
-    width: 100%;
     scroll-snap-align: center;
+    /* border: 2px solid red; */
 }
+#section-about h1{
+    color: var(--heading-white);
+    font-family: "futura_m";
+    font-size: 2rem;
+    line-height: 1;
+    letter-spacing: 0.1em;
+    
+    font-weight: normal;
+    padding-top: 40px;
+    padding-bottom: 20px;
+}
+.about-inner{
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    grid-gap: max(10px);
+    justify-items: center;
+}
+.inner-left{
+    
+    justify-self: end;
+    padding-right: clamp(0%,20%,25% );
+}
+.inner-left p{
+    /* border: 2px solid red; */
+    min-width: 30vw;
+    max-width: 440px;
+    color: #bfd2d5;
+    padding-right: 2%;
+    padding-left: 2%;
+    font-family: 'Calibre","Inter","San Francisco","SF Pro Text",-apple-syste';
+    line-height: 1.3;
+    font-size: 20px;
+    
+}
+.inner-left p span{
+    color: var(--blue);
+}
+
+.inner-left ul{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    list-style: none;    
+    /* padding-left: 0%; */
+}
+.inner-left ul li{
+    color: var(--green);
+    line-height: 1.3;
+    letter-spacing: 0.1em;
+
+}
+.inner-left ul li::before {
+    content: "▹";
+    /* position: absolute; */
+    /* left: 0px; */
+    color: var(--green);
+    font-size: 20px;
+    line-height: 12px;
+}
+.inner-left p a{
+    color: var(--green);
+    transition: all 0.25s  ;
+}
+
+.inner-right{
+    height: 100%;
+    width: 100%;
+    width: max(87%);
+    /* background-color:#ff4d5a; */
+    margin-right: 13%;
+    /* background-color: #ff4d5a; */
+    /* color: red; */
+    /* animation: reveal-right 1s ease-out 0s infinite forwards normal; */
+    /* animation: reveal-right 1s ease-out 0s 1 normal forwards; */
+}
+
 #section-projects{
     height: 100vh;
     width: 100%;
@@ -527,7 +629,7 @@ footer{
     width: calc(100vw - 80px);
     height: fit-content;
     scroll-snap-align:center;
-    width: 100vw;
+    width: 99.99vw;
 }
 
 
@@ -537,11 +639,35 @@ footer{
 
 
 
+.left-slide-reveal{
+    position: relative;
+    overflow: hidden;
+    display: block;
+}
 
 
-
-
-
+.left-slide-reveal::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #ff4d5a;
+    animation: a-ltr-before 2s cubic-bezier(.77,0,.18,1) forwards;
+    transform: translateX(0);
+}
+.left-slide-reveal::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    animation: a-ltr-after 2s cubic-bezier(.77,0,.18,1) forwards;
+    transform: translateX(-101%);
+}
 
 
 
@@ -595,3 +721,38 @@ footer{
     }
 }
 
+
+@keyframes RR-btts-hover {
+    100%{
+        background-color:  var(--green);
+        color: black;
+    }
+}
+
+@keyframes LT-btts-hover {
+    100%{
+        background-color:  var(--blue);
+        color: black;
+    }
+}
+
+@keyframes reveal-right {
+    0%{
+        
+        
+    }
+    100%{
+        transition: translateX(0px);
+        
+    }
+}
+
+@keyframes a-ltr-after{
+    0% {transform: translateX(-100%)}
+    100% {transform: translateX(101%)}
+}
+
+@keyframes a-ltr-before{
+    0% {transform: translateX(0)}
+    100% {transform: translateX(200%)}
+}
