--- a/pp/static/pp/css/index.css
+++ b/pp/static/pp/css/index.css
@@ -392,71 +392,14 @@ a{
 }
 .resume-button a:hover{
     color: #000;
-    transition-delay: 1.5s;
+    /* transition-delay: 1.5s; */
+    background-color: var(--green);
+
     box-shadow: 0 0 10px var(--green),
     0 0 20px var(--green),
     0 0 40px var(--green),
     0 0 80px var(--green),
     0 0 160px var(--green);
-    
-}
-.resume-button a span{
-    position: relative;
-    z-index: 100;
-}
-
-
-.resume-button a::before{
-    content: "";
-    position: absolute;
-    left: -20px;
-    top: 50%;
-    transform: translateY(-50%);
-    height: 2px;
-    width: 20px;
-    background:var(--green);
-    box-shadow: 5px -8px 0 var(--green),
-                5px 8px 0 var(--green);
-    transition:width 0.5s,left 0.5s,height 0.5s,box-shadow 0.5s;
-    transition-delay: 1s,0.5s,0s;
-    
-}
-.resume-button a:hover::before{
-    width: 50%;
-    height:100%;
-    left: -2px;
-    /* top: 4px; */
-    box-shadow: 5px 0 0 var(--green),
-    5px 0 0 var(--green);
-    transition-delay: 0s,0s,0.5s,1s;
-    
-}
-
-
-
-.resume-button a::after{
-    content: "";
-    position: absolute;
-    right: -20px;
-    top: 50%;
-    transform: translateY(-50%);
-    height: 2px;
-    width: 20px;
-    background:var(--green);
-    box-shadow: -5px -8px 0 var(--green),
-                -5px 8px 0 var(--green);
-    transition:width 0.5s,left 0.5s,height 0.5s,box-shadow 0.5s;
-    transition-delay: 1s,0.5s,0s;
-    
-}
-.resume-button a:hover::after{
-    width: 60%;
-    height:100%;
-    right: -2px;
-    /* top: 4px; */
-    box-shadow: -5px 0 0 var(--green),
-                -5px 0 0 var(--green);
-    transition-delay: 0s,0s,0.5s,1s;
     
 }
 
@@ -477,6 +420,7 @@ a{
     word-wrap: break-word;
 }
 .talk-button a:hover{
+    background-color: var(--blue);
     box-shadow: 0 0 10px var(--blue),
     0 0 20px var(--blue),
     0 0 40px var(--blue),
@@ -484,20 +428,6 @@ a{
     0 0 160px var(--blue);
 }
 
-.talk-button a::before{
-    box-shadow: 5px -8px 0 var(--blue),
-    5px 8px 0 var(--blue);
-    background:var(--blue);
-}
-.talk-button a::after{
-    box-shadow: -5px -8px 0 var(--blue),
-    -5px 8px 0 var(--blue);
-    background:var(--blue);
-}
-.talk-button a:hover::after{
-    box-shadow: -5px 0 0 var(--blue),
-    -5px 0 0 var(--blue);
-}
 
 .hover-underline-animation {
     display: inline-block;
@@ -559,7 +489,7 @@ a{
 .inner-left{
     
     justify-self: end;
-    padding-right: clamp(0%,20%,25% );
+    padding-right: max(15%);;
 }
 .inner-left p{
     /* border: 2px solid red; */
