--- a/pp/templates/pp/index.html
+++ b/pp/templates/pp/index.html
@@ -128,7 +128,11 @@
                 </div>
 
             </section>
-            <section id="section-projects" class="border-line">projects</section>
+
+            <section id="section-projects" class="border-line">
+                {%include 'pp/projects.html'%}
+            </section>
+            
             <section id="section-experience" class="border-line">experience</section>
 
         </main>
