--- a/pp/templates/pp/testimonials.html
+++ b/pp/templates/pp/testimonials.html
@@ -17,7 +17,7 @@
                                 adipisicing elit. Laudantium, repellendus.</p>
                             <div class="details">
                                 <!-- <div class="imgBx"> <img src="" alt="user-err"></div> -->
-                                <h3> <a href=""class="hover-underline-animation"> someone famous </a><span><br> Creative Designer</span></h3>
+                                <h3> <a href=""class="hover-underline-animation"> someone famous </a><span><br> creative designer</span></h3>
                             </div>
                         </div>
                     </div>
