projects section completed

--- a/pp/templates/pp/index.html
+++ b/pp/templates/pp/index.html
@@ -82,8 +82,8 @@
 
             <section id="section-about" class="reveal">
                 <h1 class="">ABOUT</h1>
-                <div class="about-inner">
-                    <div class="inner-left border-line">
+                <div class="about-inner reveal">
+                    <div class="inner-left border-line reveal">
                         <p>Hi, My name is <span>Saad Khan</span>, aka <span>The Upper Case Guy</span>.
                             I like creating things, whether they be Games, WebSites,
                             SoftWares or anything that gives a challenge. 
@@ -120,7 +120,7 @@
                             <li>Memory Management(Pointers)</li>
                         </ul>
                     </div>
-                    <div class="inner-right border-line left-slide-reveal">
+                    <div class="inner-right border-line left-slide-reveal reveal">
                         {%include 'pp/testimonials.html'%}
 
                     </div>
@@ -129,7 +129,7 @@
 
             </section>
 
-            <section id="section-projects" class="border-line">
+            <section id="section-projects" class="border-line reveal">
                 {%include 'pp/projects.html'%}
             </section>
             
