--- a/pp/static/pp/css/projects.css
+++ b/pp/static/pp/css/projects.css
@@ -30,35 +30,23 @@
     padding: 0;
 }
 .list{
-    /* width: clamp(1000px,1000px,); */
-    border: 2px solid rgb(0, 0, 0);
-    min-height:300px;
+
+    /* border: 2px solid rgb(0, 0, 0); */
     display: grid;
-    max-width: 1000px !important;
+    max-width: 800px !important;
     grid-template-columns: repeat(12,1fr);
     
     align-items: center;
-    margin-bottom: 100px;
+    margin-bottom: 30px;
 }
-.list > div{
-    border: 2px solid blue;
-}
-
 
 .project-content{
+
     position: relative;
     grid-area: 1 / 6 / 1 / 13;
-    border: 2px solid blue;
     text-align: right;
-    z-index: 10;
+    z-index: 2;
     
-    /* max-height: 150px; */
-    /* width: fit-content; */
-    /* min-width: 300px; */
-    /* min-width: max-content; */
-    /* position: relative;
-    left: 100px; */
-    /* font-size: 16rem; */
 }
 .proj-overline{
     margin: 10px 0;
@@ -91,8 +79,19 @@
     border-radius:4px ;
     background-color: #00a4bf;
     font-size: 18px;
-    max-width: 400px;
+    /* max-width: 400px; */
     text-align: right;
+}
+.proj-desc:hover{
+    box-shadow: 0 10PX 30PX -15px #112240;
+    transition: all 0.25s 
+    cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+.proj-desc > a{
+    color: var(--green);
+    font-size: inherit;
+    font-weight: inherit;
+    font-family: inherit;
 }
 
 .tech-list{
@@ -115,17 +114,89 @@
 .proj-links{
     display: flex;
     flex-direction: row-reverse;
-    /* justify-content: flex-end; */
 }
-.proj-links > a{
+
+
+.proj-links svg{
     z-index: 2;
-    color: red;
+    margin-left: 20px;
+    width: 20px;
+    height: 20px;
+    color: var(--paras);
 }
 
-
+.proj-links svg:hover{
+    color: var(--green);
+}
 
 .project-visual{
     position: relative;
     z-index: 1;
     grid-area: 1 / 1 / 1 / 7;
 }
+
+
+.videowrapper{
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0px;
+    filter: grayscale(100%) contrast(1) brightness(90%); 
+}
+.videowrapper:hover{
+    filter: none;
+    transition: all 0.25s ease-in;
+}
+
+.project-visual  iframe{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    border-radius: 8px;
+    /* border: 2px solid red; */
+}
+
+.alt > .project-visual{
+    grid-area: 1 / 6 / 1 / 13;
+    z-index: 2;
+}
+
+.alt > .project-content{
+    position: relative;
+    grid-area: 1 / 1 / 1 / 7;
+    z-index: 2;
+    text-align: left;
+}
+
+.alt > .project-content > .proj-desc{
+    text-align: left;
+}
+.alt > .project-content > .tech-list{
+    flex-direction: row;
+}
+.alt > .project-content > .tech-list > li{
+    padding: 0%;
+    padding-right:20px ;
+}
+.alt > .project-content > .proj-links{
+    flex-direction: row;
+}
+.alt > .project-content > .proj-links  svg{
+    margin: 0%;
+    margin-right: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
