--- a/pp/templates/pp/projects.html
+++ b/pp/templates/pp/projects.html
@@ -4,10 +4,22 @@
 
 <h1 class="main-heading">projects</h1>
 <div class="center">
-  <div class="projects-container">
+  <div class="projects-container reveal">
     <ul>
-      <li class="list">
-        <div class="project-visual">ads</div>
+      <li class="list reveal">
+        <div class="project-visual">
+          <div class="videowrapper">
+
+            <iframe  
+            src="https://www.youtube.com/embed/FrRM20wTvcQ" 
+            title="FLYING OVER GREECE (4K UHD) Amazing Beautiful Nature Scenery with Relaxing Music | 4K VIDEO ULTRA HD" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            ></iframe>
+
+          </div>
+
+        </div>
 
         <div class="project-content">
           <p class="proj-overline">Standalone Project</p>
@@ -29,16 +41,101 @@
             <li>Beautiful soup 4</li>
           </ul>
           <div class="proj-links">
-            <a href="https://github.com/bchiang7/halcyon-site" aria-label="GitHub Link" rel="noopener noreferrer" target="_blank">
-              
-            </a>
+            <a href=""><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><title>External Link</title><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg></a>
+            <a href="https://github.com/bchiang7" aria-label="GitHub" target="_blank" rel="noreferrer"><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><title>GitHub</title><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg></a>
+                
             
-            <a href="">reference</a>
           </div>
         </div>
       </li>
 
-      <li>asdf</li>
+      <li class="alt list reveal">
+        <div class="project-visual">
+          <div class="videowrapper">
+
+            <iframe  
+            src="https://www.youtube.com/embed/FrRM20wTvcQ" 
+            title="FLYING OVER GREECE (4K UHD) Amazing Beautiful Nature Scenery with Relaxing Music | 4K VIDEO ULTRA HD" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            ></iframe>
+
+          </div>
+
+        </div>
+
+        <div class="project-content">
+          <p class="proj-overline">Standalone Project</p>
+          <h3 class="proj-title">
+            <a href="" class="hover-underline-animation">Yelp Web Scrapper</a>
+          </h3>
+          <div class="proj-desc">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+              eligendi pariatur explicabo, nulla, quis voluptatum debitis ipsa
+              ex deleniti maxime necessitatibus, repellat architecto quibusdam?
+              Debitis et voluptatem corrupti vitae quibusdam?
+            </p>
+          </div>
+          <ul class="tech-list">
+            <li>Python</li>
+            <li>Python</li>
+            <li>Python</li>
+            <li>Beautiful soup 4</li>
+          </ul>
+          <div class="proj-links">
+            <a href=""><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><title>External Link</title><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg></a>
+            <a href="https://github.com/bchiang7" aria-label="GitHub" target="_blank" rel="noreferrer"><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><title>GitHub</title><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg></a>
+                
+            
+          </div>
+        </div>
+      </li>
+
+      <li class="list reveal">
+        <div class="project-visual">
+          <div class="videowrapper">
+
+            <iframe  
+            src="https://www.youtube.com/embed/FrRM20wTvcQ" 
+            title="FLYING OVER GREECE (4K UHD) Amazing Beautiful Nature Scenery with Relaxing Music | 4K VIDEO ULTRA HD" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            ></iframe>
+
+          </div>
+
+        </div>
+
+        <div class="project-content">
+          <p class="proj-overline">Standalone Project</p>
+          <h3 class="proj-title">
+            <a href="" class="hover-underline-animation">Yelp Web Scrapper</a>
+          </h3>
+          <div class="proj-desc">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+              eligendi pariatur explicabo, nulla, quis voluptatum debitis ipsa
+              ex deleniti maxime necessitatibus, repellat architecto quibusdam?
+              Debitis et voluptatem corrupti vitae quibusdam?
+            </p>
+          </div>
+          <ul class="tech-list">
+            <li>Python</li>
+            <li>Python</li>
+            <li>Python</li>
+            <li>Beautiful soup 4</li>
+          </ul>
+          <div class="proj-links">
+            <a href=""><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><title>External Link</title><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg></a>
+            <a href="https://github.com/bchiang7" aria-label="GitHub" target="_blank" rel="noreferrer"><svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><title>GitHub</title><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg></a>
+                
+            
+          </div>
+        </div>
+      </li>
+
+
     </ul>
   </div>
 </div>
