--- a/pp/static/pp/css/index.css
+++ b/pp/static/pp/css/index.css
@@ -68,7 +68,7 @@ canvas {
   vertical-align: bottom;
 }
 .border-line{
-    /* border: 1px solid black; */
+    border: 1px solid black;
 }
 
 #root{
@@ -111,9 +111,22 @@ canvas {
     margin-bottom: 30px;
     cursor: pointer;
     border-radius: 10px;
+    /* animation: dec-scroll-size 0.3s ease-out 0s 0s forwards normal; */
 }
-
-
+.inc-size{
+    animation: inc-scroll-size 0.3s ease-out 1 0s forwards normal;
+}
+.dec-size{
+    animation: dec-scroll-size 0.3s ease-out 1 0s forwards normal;
+}
+@keyframes inc-scroll-size {
+    0%{width: 40px;}
+    100%{width: 60px;}
+}
+@keyframes dec-scroll-size {
+    0%{width: 60px;}
+    100%{width: 40px;}
+}
 
 #resume-side-btt{
     position: fixed;
@@ -757,7 +770,10 @@ a{
 	margin-right: 3px;
 	margin-bottom: 5px;
 }
-
+.footer-distributed .footer-icons a:hover{
+    color: var(--green);
+    transition: all 0.25s ease-in;
+}
 /* If you don't want the footer to be responsive, remove these media queries */
 
 @media (max-width: 880px) {
@@ -780,8 +796,150 @@ a{
 	}
 
 }
+.wrapper{
+    display: flex;
+    flex-direction: row-reverse;
+  
+}
 
+button{
+    font-family: 'Ubuntu', sans-serif;
+    width: 170px;
+    height: 40px;
+    line-height: 1;
+    font-size: 18px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    border: 3px solid #64ffda;
+    background: #596470;
+    color: #01cced;
+    border-radius: 40px;
+    cursor: pointer;
+    overflow: hidden;
+    transition: all .35s;
+}
+
+button:hover{
+  background: #fff;
+  color: var(--green);
+  border-color: var(--blue);
+}
+
+button span{
+  opacity: 1;
+  visibility: visible;
+  transition: all .35s;
+}
+
+
+
+button.is_active{
+  width: 40px;
+  height: 40px;
+}
+
+
+button.is_active span{
+  opacity: 0;
+  visibility: hidden;
+}
 /* ##############################footer css completed ########################### */
+.LT{
+    /* display: block; */
+    background-color: #596470;
+    border-radius: 4px;
+    
+    width: 100%;
+    max-width: 600px;
+    margin-top:20px ;
+    position: fixed;
+    top: 120px;
+    padding: 0 20px 20px 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    transform: translate(-50%,-1000px);
+    /* box-shadow: 0 15px 25px -15px rgb(0 0 0 / 60%); */
+}
+.close-up{
+    animation: slide-up 1s ease-in 0s 1 forwards normal;
+}
+.close-down{
+    animation: slide-down 1s ease-in 0s 1 forwards normal;
+}
+.LT:hover{
+    box-shadow: 0px 20px 25px 0px rgb(0 0 0 / 60%);
+    transition: all 0.25s ease-in;
+    
+}
+.close-lt{
+    /* display: block; */
+    position: absolute;
+    background-color: transparent;
+    background: url("../images/navclose.svg");
+
+    background-repeat: no-repeat;
+    width: 1rem;
+    border: 0;
+    aspect-ratio: 1;
+    top: 2rem;
+    right: 2rem;
+    background-position: center;
+    cursor: pointer;
+}
+.LT-inner > h3{
+    text-align: center;
+    font-size: 1.8rem;
+    letter-spacing: 0.1em;
+    text-shadow: 0 10px 15px rgba(2, 11, 22, 0.2);
+    color: #ff4d5a;
+    font-family: "futura_b";
+    font-weight: bold;
+}
+.main-form-content{
+    display: flex;
+    margin-bottom: 1rem;
+    justify-content: space-between;
+    /* align-items: center; */
+    padding-right: 0%;
+    width: 100%;
+
+}
+.field-label{
+    font-family: 'Monument Grotesk', sans-serif;
+    color: var(--blue);
+    font-size: 1.39em;
+    font-weight: 500;
+    margin-top: 9px;
+}
+label{
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    min-width: 120px;
+}
+.budget-field {
+    width: 100%;
+    height: 4.86em;
+    max-width: 38.19em;
+    margin-bottom: 0px;
+    padding-left: 25px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgba(0, 0, 0, 0.1);
+    border-radius: 6px;
+    font-size: 0.8rem;
+    letter-spacing: 0.01em;
+}
+#message{
+    min-height: 200px;
+    padding-top: 24px
+}
+
+ 
+
+
+
+
 
 /* ################################# KEY FRAMES######################## */
 
@@ -866,4 +1024,15 @@ a{
 @keyframes a-ltr-before{
     0% {transform: translateX(0)}
     100% {transform: translateX(200%)}
+}
+
+
+@keyframes slide-down {
+ 0%{ transform: translate(-50%,-1000px);}   
+ 100%{ transform: translate(-50%,0px);}   
+}
+@keyframes slide-up {
+    0%{ transform: translate(-50%,0px);}   
+    100%{ transform: translate(-50%,-1000px);}   
+    
 }
