--- a/pp/templates/pp/index.html
+++ b/pp/templates/pp/index.html
@@ -29,6 +29,7 @@
                 <li class="scrol-btts bt1 inc-size" onclick="scroll_section('primary-navigation'),inc_scroll_size('bt1')"><a href="#section-home"><span></span></a></li>
                 <li class="scrol-btts bt2" onclick="scroll_section('section-about'),inc_scroll_size('bt2')"><a href="#section-about"><span></span></a></li>
                 <li class="scrol-btts bt3" onclick="scroll_section('section-projects'),inc_scroll_size('bt3')"><a href="#section-projects"><span></span></a></li>
+                <li class="scrol-btts bt4" onclick="scroll_section('footer-distributed'),inc_scroll_size('bt4'), down_scroll_click()"><a href="#foot"><span></span></a></li>
             </ul>
         </div>  
         <div  class="right-side-btts">
@@ -199,8 +200,8 @@
             </form>
         </div>
     </div>
-    
-    <footer class="footer-distributed reveal">
+        
+    <footer class="foot footer-distributed reveal">
 
         <div class="footer-left">
 
