--- a/pp/templates/pp/navbar.html
+++ b/pp/templates/pp/navbar.html
@@ -22,8 +22,8 @@
             </a>
         </li>
         <li>
-            <a href="#section-experience">
-                <span aria-hidden="true">03</span> Experience
+            <a href="#footer-distributed" onclick="down_scroll_click()">
+                <span aria-hidden="true">03</span> Contact
             </a>
         </li>
 
